--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
   },
   "homepage": "https://github.com/justapps4all/github-jsonp#readme",
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-git": "^1.10.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-sequence": "^0.4.5",
     "jasmine-node": "^1.14.5",
-    "karma-sauce-launcher": "^1.0.0",
-    "requirejs": "^2.2.0",
     "karma": "^0.12.0",
-    "karma-sauce-launcher": "^0.2.3",
-    "karma-jasmine": "^0.2.2",
     "karma-chrome-launcher": "^0.1.2",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-safari-launcher": "^0.1.1"
+    "karma-jasmine": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-sauce-launcher": "^0.2.3",
+    "requirejs": "^2.2.0",
+    "run-sequence": "^1.2.2"
   }
 }
