--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/justapps4all/github-jsonp#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-copy": "0.0.2",
     "gulp-git": "^1.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sequence": "^0.4.5",
     "jasmine-node": "^1.14.5",
